--- a/main/views/auth/login.ejs
+++ b/main/views/auth/login.ejs
@@ -1,16 +1,13 @@
-<%- include('../includes/body.ejs') %>
-   <%- include('../includes/nav.ejs') %>
-    <main>
-        <form action="/login" method="POST">
-            <div>
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
-            </div>
-            <div>
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
-            <button type="submit">Login</button>
-        </form>
-    </main>
-<%- include('../includes/end.ejs') %>
+<%- include('../includes/body') %>
+
+<%- include('../includes/nav') %>
+
+<form action="/login" method="POST">
+    <h2>Preencha os campos para fazer login:</h2>
+    <label for="email">E-Mail</label>
+    <input type="email" name="email" id="email" required">
+    <label for="password">Senha</label>
+    <input type="password" name="password" id="password required">
+
+    <button type="submit">Login</button>
+</form>
