--- a/main/public/css/nav.css
+++ b/main/public/css/nav.css
@@ -36,11 +36,13 @@ nav .right a {
     margin: 0 15px;
     font-size: 16px;
     transition: color 0.3s ease;
+    transition: all 0.14s ease;
 }
 
 nav .left a:hover,
 nav .right a:hover {
     color: #3498db;
+    transition: all 0.14s ease;
 }
 
 nav .left a,
@@ -60,6 +62,7 @@ nav .right i {
     margin-right: 10px;
     font-size: 20px;
     cursor: pointer;
+    transition: all 0.14s ease;
 }
 
 nav .right a {
@@ -67,19 +70,30 @@ nav .right a {
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 600;
+    transition: all 0.14s ease;
 }
 
 nav .right i:hover,
 nav .right a:hover {
     color: #3498db;
+    transition: all 0.14s ease;
 }
 
 #lo > button {
     position: absolute;
     right: 6vw;
-    top: 12px;
+    top: 9px;
     border: none;
-    padding: 5px 10px;
+    padding: 7px 12px;
+    /* border-radius: 5px; */
+    color: #3498db;
+    transition: all 0.14s ease;
+}
+
+#lo > button:hover {
+    color: white;
+    background-color: #3498db;
+    transition: all 0.14s ease;
 }
 
 /* Media section */
