--- a/main/views/auth/profile.ejs
+++ b/main/views/auth/profile.ejs
@@ -8,8 +8,7 @@
 <h1><%= user.name %></h1>
 <h1><%= user.email %></h1>
 <% cartProds.forEach(prod => { %>
-    <h1><%= prod.title %></h1>
-    <% console.log(prod.productId.title) %>
+0    <h1><%= prod.productId.title %></h1>
 <% }) %>
 
 <%- include('../includes/end') %>
