trying to resolve the auth :(

--- a/main/views/includes/nav.ejs
+++ b/main/views/includes/nav.ejs
@@ -19,6 +19,7 @@
         <% } %>
         <% if (!isAuthenticated) { %>
            <a href="/login">Login</a>
+           <a href="/signup">SignUp</a>
         <% } %>
     </div>
 </nav>
