--- a/main/views/auth/login.ejs
+++ b/main/views/auth/login.ejs
@@ -2,7 +2,7 @@
 
 <%- include('../includes/nav') %>
 
- action="/login" method="POST">
+ <form action="/login" method="POST">
     <h2>Preencha os campos para fazer login:</h2>
     <label for="email">E-Mail</label>
     <input type="email" name="email" id="email" required">
