--- a/main/views/shop/contact.ejs
+++ b/main/views/shop/contact.ejs
@@ -18,7 +18,7 @@
         <div class="contact-form">
             <!-- Trabalhar aqui futuramente -->
             <h2>Envie uma Mensagem</h2>
-             action="/message" method="post">
+            <form action="/message" method="post">
                 <label for="name">Nome:</label>
                 <input type="text" id="name" name="name" required>
 
