--- a/main/views/auth/signup.ejs
+++ b/main/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<%- include('../includes/head.ejs') %>
+<%- include('../includes/body.ejs') %>
 <%- include('../includes/nav.ejs') %>
 
 <% if (errorMessage) { %>
