--- a/main/views/auth/login.ejs
+++ b/main/views/auth/login.ejs
@@ -5,9 +5,12 @@
  <form action="/login" method="POST">
     <h2>Preencha os campos para fazer login:</h2>
     <label for="email">E-Mail</label>
-    <input type="email" name="email" id="email" required">
+    <input type="email" name="email" id="email" required>
     <label for="password">Senha</label>
-    <input type="password" name="password" id="password required">
+    <input type="password" name="password" id="password" required>
 
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button type="submit">Login</button>
 </form>
+
+<%- include('../includes/end.ejs') %>
