--- a/main/public/css/auth.css
+++ b/main/public/css/auth.css
@@ -10,11 +10,6 @@ form {
     max-width: 1200px;
     margin: auto;
     margin-top: 50px;
-    transition: all 0.5s ease;
-}
-
-form:hover {
-    padding: 2.5rem;
 }
 
 form > h2 {
@@ -37,7 +32,7 @@ form > button {
     border: none;
     background-color: rgb(7, 7, 56);
     padding: 10px 20px;
-    border-radius: 7px;
+    /* border-radius: 7px; */
     color: white;
     font-weight: 700;
 }
