--- a/main/public/css/orders.css
+++ b/main/public/css/orders.css
@@ -36,9 +36,9 @@
     border-bottom: none;
 }
 
-.orders li:hover {
+/* .orders li:hover {
     background-color: #e9ecef;
-}
+} */
 
 li {
     margin-left: 10px;
