--- a/main/views/auth/signup.ejs
+++ b/main/views/auth/signup.ejs
@@ -8,6 +8,7 @@
     <% if (errorMessage) { %>
     <div class="user-message user-message--error"><%= errorMessage %></div>
     <% } %>
+    <h2>Preencha os campos para criar sua conta:</h2>
     <label for="username">Nome de Usuário</label>
     <input type="text" name="username" id="username" required>
     <label for="email">E-Mail</label>
@@ -18,7 +19,7 @@
     <input type="password" name="confirmPassword" id="confirmPassword"> -->
     
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-    <button class="btn" type="submit">Signup</button>
+    <button class="btn" type="submit">Criar conta</button>
 </form>
 
 <%- include('../includes/end.ejs') %>
