fixed error msg

--- a/main/views/auth/login.ejs
+++ b/main/views/auth/login.ejs
@@ -4,7 +4,7 @@
 
  <form action="/login" method="POST">
     <% if (errorMessage) { %>
-        <div class="user-message user-message--error"><%= errorMessage %></div>
+        <div class="error"><%= errorMessage %></div>
     <% } %>
     <h2>Preencha os campos para fazer login:</h2>
     <label for="email">E-Mail</label>
