--- a/main/views/auth/reset.ejs
+++ b/main/views/auth/reset.ejs
@@ -2,19 +2,16 @@
 
 <%- include('../includes/nav') %>
 
- <form action="/login" method="POST">
+ <form action="/reset" method="POST">
     <% if (errorMessage) { %>
         <div class="error"><%= errorMessage %></div>
     <% } %>
-    <h2>Preencha os campos para fazer login:</h2>
+    <h2>Preencha os campos para resetar sua senha:</h2>
     <label for="email">E-Mail</label>
     <input type="email" name="email" id="email" required>
-    <label for="password">Senha</label>
-    <input type="password" name="password" id="password" required>
 
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-    <button type="submit">Login</button>
+    <button type="submit">resetar/button>
 </form>
-<a href="/reset">Resetar senha</a>
 
 <%- include('../includes/end.ejs') %>
