--- a/main/views/auth/login.ejs
+++ b/main/views/auth/login.ejs
@@ -14,7 +14,7 @@
 
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button type="submit">Login</button>
+    <a href="/reset" class="forgot">Esqueceu a senha?</a>
 </form>
-<a href="/reset">Resetar senha</a>
 
 <%- include('../includes/end.ejs') %>
