--- a/main/public/css/auth.css
+++ b/main/public/css/auth.css
@@ -45,3 +45,13 @@ form > button:hover {
     color: red;
     font-weight: 700;
 }
+
+.forgot {
+    margin-top: 20px;
+    text-decoration: none;
+    color: rgb(7, 7, 56);
+}
+
+.forgot:hover {
+    opacity: 0.8;
+}
