--- a/main/views/auth/reset.ejs
+++ b/main/views/auth/reset.ejs
@@ -2,7 +2,7 @@
 
 <%- include('../includes/nav') %>
 
- <form action="/reset-password" method="POST">
+ <form action="/reset" method="POST">
     <% if (errorMessage) { %>
         <div class="error"><%= errorMessage %></div>
     <% } %>
