updated new password

--- a/main/views/auth/new-password.ejs
+++ b/main/views/auth/new-password.ejs
@@ -11,6 +11,7 @@
     <input type="password" name="password" id="password" required>
 
     <input type="hidden" name="userId" value="<%= userId %>">
+    <input type="hidden" name="passwordToken value="<%= passwordToken %>">
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button type="submit">Atualizar senha</button>
     <a href="/login" class="forgot">Já sei minha senha!</a>
