added author product

--- a/main/views/admin/admin-area.ejs
+++ b/main/views/admin/admin-area.ejs
@@ -4,8 +4,7 @@
 
 <div class="links">
     <div class="urls">
-        <a href="/admin/add-product"><span>Adiconar produto</span> - Adicione os produtos da loja aqui</a>
-        <a href="/admin/products"><span>Inspecionar produtos</span> - Edite ou remova os produtos da loja aqui</a>
-        <a href="/admin/add-best-seller"><span>Adicionar Produto Bestseller</span> - Adicione produtos de melhores vendas aqui</a>
+        <a href="/admin/add-product"><span>Adiconar produto</span> - Adicione os produtos de sua loja aqui</a>
+        <a href="/admin/products"><span>Inspecionar produtos</span> - Edite ou remova seus produtos da loja aqui</a>
     </div>
 </div>
