--- a/main/views/includes/nav.ejs
+++ b/main/views/includes/nav.ejs
@@ -3,10 +3,10 @@
         <a href="/">Início</a>
         <a href="/about">Sobre</a>
         <a href="/contact">Contato</a>
-        <% if (isAuthenticated) { %>
         <a href="/shop">Loja</a>
+        <% if (isAuthenticated) { %>
         <a href="/orders">Pedidos</a>
-        <a href="/admin/admin-area">Área Admin</a>
+        <a href="/admin/admin-area">Sua área</a>
         <% } %>
     </div>
     <div class="center">
