--- a/main/views/shop/product-detail.ejs
+++ b/main/views/shop/product-detail.ejs
@@ -6,6 +6,7 @@
     <h2><%= product.title %></h2>
     <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
     <h1 class="price">R$ <%= product.price %></h1>
+    <h2>De: <%= product.userId.name %></h2>
     <h2>- <%= product.description %></h2>
     
     <form action="/cart" method="post">
