--- a/main/views/shop/home.ejs
+++ b/main/views/shop/home.ejs
@@ -8,7 +8,7 @@
                     <h1>Comece a comprar o melhor, basta um clique para realizar</h1>
                     <button>Vamos lá!</button>
                 </div>
-                <div class="best-seller">
+                <!-- <div class="best-seller">
                     <h1>Melhores vendas:</h1>
                     <div class="items">
                         <div class="product">
@@ -40,7 +40,7 @@
                             <h4>Description of the product here!</h4>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="marks">
                     <h1>Marcas</h1>
                     <hr>
